--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI="mongodb+srv://UtMandape:1BGR3QO2fcFmFHXw@cluster0.akibk.mongodb.net/Go_API?retryWrites=true&w=majority"
+MONGODB_URI="mongodb+srv://UtMandape:1BGR3QO2fcFmFHXw@cluster0.akibk.mongodb.net/Go_CRUD?retryWrites=true&w=majority"
